apps/base/mealie/05-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  type: ClusterIP
  selector:
    app: mealie
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
